include/dss_capi.h

    /*
    Time array in hours correscponding to P and Q multipliers when the Interval=0.
    */
    DSS_CAPI_DLL void LoadShapes_Set_TimeArray(double* ValuePtr, int32_t ValueCount);
    /*
    Fixed interval time value, hours
    */
    DSS_CAPI_DLL double LoadShapes_Get_HrInterval(void);
    /*
    Fixed Interval time value, in minutes
    */
    DSS_CAPI_DLL double LoadShapes_Get_MinInterval(void);
    DSS_CAPI_DLL double LoadShapes_Get_sInterval(void); // deprecated, see #24
    DSS_CAPI_DLL void LoadShapes_Set_Sinterval(double Value); // deprecated, see #24
    /*
    Fixed interval time value, hours.
    */
    DSS_CAPI_DLL void LoadShapes_Set_HrInterval(double Value);
    /*
    Fixed Interval time value, in minutes
    */
    DSS_CAPI_DLL void LoadShapes_Set_MinInterval(double Value);
    DSS_CAPI_DLL int32_t LoadShapes_New(char* Name);
    DSS_CAPI_DLL double LoadShapes_Get_PBase(void);
    /*
    Base for normalizing Q curve. If left at zero, the peak value is used.
    */
    DSS_CAPI_DLL double LoadShapes_Get_Qbase(void);
    DSS_CAPI_DLL void LoadShapes_Set_PBase(double Value);
    /*
    Base for normalizing Q curve. If left at zero, the peak value is used.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Qbase(double Value);
    /*
    T/F flag to let Loads know to use the actual value in the curve rather than use the value as a multiplier.
    */
    DSS_CAPI_DLL int8_t LoadShapes_Get_UseActual(void);
    /*
    T/F flag to let Loads know to use the actual value in the curve rather than use the value as a multiplier.
    */
    DSS_CAPI_DLL void LoadShapes_Set_UseActual(int8_t Value);
    DSS_CAPI_DLL int32_t LoadShapes_Get_idx(void);
    DSS_CAPI_DLL void LoadShapes_Set_idx(int32_t Value);
    /*
    Sets all numeric arrays for the active LoadShape.

    If ExternalMemory is 0, the data is copied, allocating memory.
    If ExternalMemory is 1, the data is NOT copied. The caller is required to keep the
    pointers alive while the LoadShape is used, as well as deallocating it later.

    If IsFloat32 is 0, the pointers are interpreted as pointers to float64/double precision numbers.
    Otherwise, the pointers are interpreted as pointers to float32/single precision numbers.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Points(int32_t Npts, void *HoursPtr, void *PMultPtr, void *QMultPtr, int8_t ExternalMemory, int8_t IsFloat32);