src/CAPI_LoadShapes.pas


//------------------------------------------------------------------------------
procedure LoadShapes_Set_TimeArray(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    elem: TLoadshapeObj;
    Value: PDoubleArray;
begin
    Value := PDoubleArray(ValuePtr);
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61002);
        Exit;
    end;
    with elem do
    begin
        if elem.ExternalMemory then
        begin
            DoSimpleMsg(DSSPrime, 'Data cannot be changed for LoadShapes with external memory! Reset the data first.', 61101);
            Exit;
        end;
        
       // Only accept the new data when the number of points match
        if ValueCount <> NumPoints then
        begin
            DoSimpleMsg(DSSPrime, Format('The number of values (%d) does not match the current Npts (%d)!', [ValueCount, NumPoints]), 61102);
            Exit;
        end;

        ReallocMem(Hours, Sizeof(Double) * ValueCount);        
        Move(ValuePtr[0], Hours[1], ValueCount * SizeOf(Double));
    end;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_HrInterval(): Double; CDECL;
var
    elem: TLoadshapeObj;
begin
    Result := 0.0;
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    Result := elem.Interval;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_MinInterval(): Double; CDECL;
var
    elem: TLoadshapeObj;
begin
    Result := 0.0;
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    Result := elem.Interval * 60.0;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_sInterval(): Double; CDECL;
var
    elem: TLoadshapeObj;
begin
    Result := 0.0;
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    Result := elem.Interval * 3600.0;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_HrInterval(Value: Double); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    elem.Interval := Value;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_MinInterval(Value: Double); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    elem.Interval := Value / 60.0;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Sinterval(Value: Double); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    elem.Interval := Value / 3600.0;
end;
//------------------------------------------------------------------------------
function LoadShapes_New(const Name: PAnsiChar): Integer; CDECL;
begin
    Result := DSSPrime.DSSExecutive.AddObject('loadshape', Name);    // Returns handle to object
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_PBase(): Double; CDECL;
var
    elem: TLoadshapeObj;
begin
    Result := 0.0;
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    Result := elem.baseP;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_Qbase(): Double; CDECL;
var
    elem: TLoadshapeObj;
begin
    Result := 0.0;
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    Result := elem.baseQ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_PBase(Value: Double); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    elem.baseP := Value;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Qbase(Value: Double); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    elem.baseQ := Value;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_UseActual(): Boolean; CDECL;
var
    elem: TLoadshapeObj;
begin
    Result := FALSE;
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    Result := elem.UseActual;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_UseActual(Value: Boolean); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;
    elem.UseActual := Value;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_idx(): Integer; CDECL;
begin
    Result := DSSPrime.LoadShapeClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_idx(Value: Integer); CDECL;
begin
    if DSSPrime.LoadShapeClass.ElementList.Get(Value) = NIL then
        DoSimpleMsg(DSSPrime, 'Invalid LoadShape index: "' + IntToStr(Value) + '".', 656565);
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Points(Npts: Integer; HoursPtr: PDouble; PMultPtr: PDouble; QMultPtr: PDouble; ExternalMemory: Boolean); CDECL;
var
    elem: TLoadshapeObj;
begin
    if DSSPrime.ActiveCircuit = NIL then
        Exit;
    elem := DSSPrime.LoadShapeClass.GetActiveObj;
    if elem = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'No active Loadshape Object found.', 61005);
        Exit;
    end;

    // If the LoadShape owns the memory, dispose the current data and reallocate if necessary
    if not elem.ExternalMemory then
    begin
        ReallocMem(elem.PMultipliers, 0);
        ReallocMem(elem.QMultipliers, 0);
        ReallocMem(elem.Hours, 0);
    end;
    elem.PMultipliers := NIL;
    elem.QMultipliers := NIL;
    elem.Hours := NIL;
    
    elem.ExternalMemory := ExternalMemory;
    elem.NumPoints := Npts;

    if not ExternalMemory then
    begin
        if PMultPtr <> NIL then
        begin
            ReallocMem(elem.PMultipliers, Sizeof(Double) * Npts);
            Move(PMultPtr[0], elem.PMultipliers[1], Npts * SizeOf(Double));
        end;
        if QMultPtr <> NIL then
        begin
            ReallocMem(elem.QMultipliers, Sizeof(Double) * Npts);
            Move(QMultPtr[0], elem.QMultipliers[1], Npts * SizeOf(Double));
        end;
        if HoursPtr <> NIL then
        begin
            ReallocMem(elem.Hours, Sizeof(Double) * Npts);
            Move(HoursPtr[0], elem.Hours[1], Npts * SizeOf(Double));
        end;
        
        Exit;
    end;
    
    // Using shared memory
    elem.SetDataPointers(HoursPtr, PMultPtr, QMultPtr);
end;
//------------------------------------------------------------------------------
end.
